--- a/configurations/services/ftp-21.yaml
+++ b/configurations/services/ftp-21.yaml
@@ -2,4 +2,5 @@ apiVersion: "v1"
 protocol: "ftp"
 address: "21"
 description: "FTP Honeypot"
-commands:
+banner: "220 FTP Server Ready"
+deadlineTimeoutSeconds: 300
